hasta aquí llegue

--- a/webapp/src/app/barra-busqueda/barra-busqueda.component.html
+++ b/webapp/src/app/barra-busqueda/barra-busqueda.component.html
@@ -1,3 +1,8 @@
-<p>
-  barra-busqueda works!
-</p>
+<div class="input-group mb-3">
+  <input
+    type="text" class="form-control" placeholder="Ingrese un usuario, comida o ingrediente"
+    aria-label="Usuario, comida o ingrediente" aria-describedby="button-addon2">
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+  </div>
+</div>
