--- a/webapp/src/app/membrete/membrete.component.html
+++ b/webapp/src/app/membrete/membrete.component.html
@@ -1,3 +1,8 @@
-<p>
-  membrete works!
-</p>
+<div class="d-flex justify-content-end">
+  <a class="navbar-brand" href="#">
+    <img
+      src="http://liberterre.fr/metahistoire/espagnol/neytirisaldana.jpg" width="30" height="30"
+      class="d-inline-block align-top" alt="avatar">
+    Nombre de usuario
+  </a>
+</div>
