--- a/webapp/src/app/usuario/usuario.component.html
+++ b/webapp/src/app/usuario/usuario.component.html
@@ -1,3 +1,7 @@
-<p>
-  usuario works!
-</p>
+<div class="card text-center">
+  <h5 class="card-header">Nombre Apellido</h5>
+  <img class="card-img-top img-fluid" src="http://liberterre.fr/metahistoire/espagnol/neytirisaldana.jpg" alt="avatar">
+  <div class="card-footer text-muted">
+    <button class="btn btn-primary" type="button">Visitar</button>
+  </div>
+</div>
