--- a/webapp/src/app/comida/comida.component.html
+++ b/webapp/src/app/comida/comida.component.html
@@ -1,3 +1,20 @@
-<p>
-  comida works!
-</p>
+<div style="padding: 50% 0">
+  <div class="contenedor">
+    <div class="row">
+      <div class="col-sm-6" style="padding: 0;">
+        <img
+          src="http://valeunperu.pe/wp-content/uploads/2016/05/rocoto-relleno-plato-arequipen%CC%83o-192x96.jpg"
+          alt="plato1" style="max-width:100%; height:auto;">
+      </div>
+      <div class="col-sm-6" style="padding: 0;">
+        <div class="contenedor-texto">
+          <ul style="list-style-type: none;padding: 0;margin:0;">
+            <li>Atributo1</li>
+            <li>Atributo2</li>
+            <li>Atributo3</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
